--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,10 @@
         "lint": "next lint",
         "test": "vitest run",
         "test:watch": "vitest",
-        "test:ci": "vitest run --coverage"
+        "test:ci": "vitest run --coverage",
+        "test:e2e": "playwright test",
+        "test:e2e:ui": "playwright test --ui",
+        "test:e2e:local": "run-s build test:e2e"
     },
     "dependencies": {
         "@cartesi/rollups-explorer-ui": "*",
@@ -51,6 +54,7 @@
         "@graphql-codegen/typescript-operations": "^4",
         "@graphql-codegen/typescript-urql": "^4",
         "@graphql-typed-document-node/core": "^3",
+        "@playwright/test": "^1.43.1",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
