--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,8 @@
         "BASE_PATH",
         "NEXT_PUBLIC_CHAIN_ID",
         "NEXT_PUBLIC_EXPLORER_API_URL",
-        "NEXT_PUBLIC_ALCHEMY_API_KEY"
+        "NEXT_PUBLIC_ALCHEMY_API_KEY",
+        "CI"
     ],
     "pipeline": {
         "build": {
