--- a/packages/decoder/package.json
+++ b/packages/decoder/package.json
@@ -8,9 +8,12 @@
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "lint": "eslint \"src/**/*.ts*\"",
+    "format": "prettier \"src/**/*.ts*\" --write",
+    "format:check": "prettier \"src/**/*.ts*\" --check",
     "build": "tsup src/index.ts --format esm,cjs --dts"
   },
   "dependencies": {
+    "@shazow/whatsabi": "0.11.0",
     "ethers": "^6.9.0",
     "viem": "^2",
     "wagmi": "^2",
