--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
         "@react-spring/web": "^9.7.3",
         "@tanstack/react-query": "^5.27.5",
         "@vercel/analytics": "^1.2.2",
+        "@vercel/speed-insights": "^1.0.10",
         "abitype": "^0.9",
         "encoding": "^0.1",
         "graphql": "^16",
