--- a/packages/decoder/package.json
+++ b/packages/decoder/package.json
@@ -6,8 +6,8 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --watch",
+    "build": "dotenv -e .env -- tsup \"src/**/*.ts*\" --format esm,cjs --dts",
+    "dev": "dotenv -e .env -- tsup \"src/**/*.ts*\" --format esm,cjs --dts --watch",
     "lint": "eslint \"src/**/*.ts*\"",
     "format:check": "prettier \"**/*.{ts,tsx}\" --check",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@shazow/whatsabi": "0.11.0",
+    "dotenv": "^16.4.5",
     "ethers": "^6.9.0",
     "viem": "^2",
     "wagmi": "^2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@cartesi/tsconfig": "*",
+    "dotenv-cli": "latest",
     "eslint": "^8",
     "eslint-config-cartesi": "*",
     "tsup": "^7",
