--- a/packages/decoder/package.json
+++ b/packages/decoder/package.json
@@ -6,8 +6,8 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "dotenv -e .env -- tsup \"src/**/*.ts*\" --format esm,cjs --dts",
-    "dev": "dotenv -e .env -- tsup \"src/**/*.ts*\" --format esm,cjs --dts --watch",
+    "build": "dotenv -- tsup \"src/**/*.ts*\" --format esm,cjs --dts",
+    "dev": "dotenv -- tsup \"src/**/*.ts*\" --format esm,cjs --dts --watch",
     "lint": "eslint \"src/**/*.ts*\"",
     "format:check": "prettier \"**/*.{ts,tsx}\" --check",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
@@ -19,8 +19,7 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.9.0",
     "viem": "^2",
-    "wagmi": "^2",
-    "zod": "^3.22.4"
+    "wagmi": "^2"
   },
   "devDependencies": {
     "@cartesi/tsconfig": "*",
