--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -19,8 +19,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4",
-        "wagmi": "^2",
-        "serve": "^14.2.1"
+        "serve": "^14.2.1",
+        "wagmi": "^2"
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
