--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
         "NEXT_PUBLIC_EXPLORER_API_URL",
         "NEXT_PUBLIC_ALCHEMY_API_KEY",
         "CI",
-        "E2E_BASE_URL"
+        "E2E_BASE_URL",
+        "VERCEL_URL"
     ],
     "pipeline": {
         "build": {
@@ -51,7 +52,6 @@
             ]
         },
         "test:e2e": {
-            "dependsOn": ["build"],
             "outputs": ["playwright-report/**"],
             "inputs": [
                 "src/**/*.ts",
