--- a/turbo.json
+++ b/turbo.json
@@ -7,8 +7,7 @@
         "NEXT_PUBLIC_EXPLORER_API_URL",
         "NEXT_PUBLIC_ALCHEMY_API_KEY",
         "CI",
-        "E2E_BASE_URL",
-        "VERCEL_URL"
+        "E2E_BASE_URL"
     ],
     "pipeline": {
         "build": {
