--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,27 +1,28 @@
 name: End-to-end testing
 on:
-  deployment_status:
+    deployment_status:
 jobs:
-  e2e:
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' && contains(github.event.deployment_status.environment_url, 'rollups-explorer-sepolia')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
+    e2e:
+        if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' && contains(github.event.deployment_status.environment_url, 'rollups-explorer-sepolia')
+        timeout-minutes: 30
+        runs-on: ubuntu-latest
+        steps:
+            - name: Check out code
+              uses: actions/checkout@v4
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3
-        with:
-          node-version: latest
-          cache: "yarn"
+            - name: Setup Node.js environment
+              uses: actions/setup-node@v4
+              with:
+                  node-version: latest
+                  cache: "yarn"
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+            - name: Install dependencies
+              run: yarn install --frozen-lockfile
 
-      - name: Install Playwright
-        run: yarn playwright install --with-deps
+            - name: Install Playwright
+              run: yarn playwright install --with-deps
 
-      - name: Run e2e tests
-        run: yarn test:e2e
-        env:
-          E2E_BASE_URL: ${{ github.event.deployment_status.environment_url }}
+            - name: Run e2e tests
+              run: yarn test:e2e
+              env:
+                  E2E_BASE_URL: ${{ github.event.deployment_status.environment_url }}
