--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
         "NEXT_PUBLIC_EXPLORER_API_URL",
         "NEXT_PUBLIC_ALCHEMY_API_KEY",
         "CI",
-        "E2E_BASE_URL"
+        "E2E_BASE_URL",
+        "VERCEL_AUTOMATION_BYPASS_SECRET"
     ],
     "pipeline": {
         "build": {
@@ -49,6 +50,11 @@
                 "test/**/*.ts",
                 "test/**/*.tsx"
             ]
+        },
+        "test:e2e": {
+            "dependsOn": ["codegen"],
+            "outputs": ["playwright-report/**"],
+            "inputs": ["src/**/*.ts", "src/**/*.tsx", "e2e/**/*.ts"]
         }
     }
 }
