--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,8 @@
         "next": "^14.1.4",
         "pino-pretty": "^10",
         "pretty-ms": "^8",
-        "ramda": "^0.29.0",
+        "ramda": "0.30.1",
+        "ramda-adjunct": "^5.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4",
@@ -64,7 +65,7 @@
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
         "@types/node": "^20",
-        "@types/ramda": "^0.29.3",
+        "@types/ramda": "^0.30.1",
         "@types/react": "^18.2.42",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.1.0",
