--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,7 +31,7 @@
         "@mantine/hooks": "^7.7.1",
         "@react-spring/web": "^9.7.3",
         "@tanstack/react-query": "^5.27.5",
-        "ramda": "^0.29.0",
+        "ramda": "0.30.1",
         "react-icons": "^4",
         "viem": "^2",
         "wagmi": "^2"
@@ -45,7 +45,7 @@
         "@cartesi/tsconfig": "*",
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
-        "@types/ramda": "^0.29.3",
+        "@types/ramda": "^0.30.1",
         "@types/react": "^18.2.42",
         "@types/react-dom": "^18.2.17",
         "@vitest/coverage-v8": "^0.34.5",
