--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
         "test:ci": "vitest run --coverage",
-        "test:e2e": "playwright test ./e2e/layout/ ./e2e/pages",
+        "test:e2e": "playwright test ./e2e/layout/ ./e2e/pages && xvfb-run npx playwright test ./e2e/transactions/metamask.spec.ts --project chromium",
         "test:e2e:local": "playwright test",
         "test:e2e:ui": "playwright test --ui"
     },
@@ -25,7 +25,7 @@
         "@mantine/form": "^7.15.3",
         "@mantine/hooks": "^7.15.3",
         "@mantine/notifications": "^7.15.3",
-        "@rainbow-me/rainbowkit": "2",
+        "@rainbow-me/rainbowkit": "2.2.8",
         "@react-spring/web": "^10.0.1",
         "@shazow/whatsabi": "^0.14.1",
         "@tanstack/react-query": "^5.27.5",
@@ -55,8 +55,8 @@
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
-        "@playwright/test": "^1.53.2",
-        "@synthetixio/synpress": "^4.1.0",
+        "@playwright/test": "^1.51.0",
+        "@tenkeylabs/dappwright": "^2.11.2",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@types/node": "^20",
@@ -72,6 +72,7 @@
         "happy-dom": "^18.0.1",
         "jsdom": "^26.1.0",
         "npm-run-all": "^4",
+        "playwright-core": "^1.54.1",
         "postcss": "^8",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7",
