--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Test secrets
         run: |
           # Get the team ids
-          TEAMS=`curl -H 'Accept: application/json' -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}' https://api.vercel.com/v2/teams`
+          TEAMS=`curl "https://api.vercel.com/v2/teams" -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}"`
+          echo "Teams: " $TEAMS
           
           # Get the Cartesi team id
           CARTESI_TEAM_ID=`node -pe 'JSON.parse(process.argv[1]).teams.find((team) => team.slug === "cartesi").id' $TEAMS`
@@ -29,4 +30,4 @@ jobs:
           
           # Fetch all current Vercel deployments for the Cartesi team
           VERCEL_DEPLOYMENTS=`curl "https://api.vercel.com/v6/deployments?teamId=$TEAM_ID" -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}"`
-          echo "Vercel deployments for current team: " VERCEL_DEPLOYMENTS
+          echo "Vercel deployments for current team: " $VERCEL_DEPLOYMENTS
