--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,6 +25,7 @@ jobs:
           echo "Teams: " $TEAMS
           
           # Get the Cartesi team id
+          node --version
           CARTESI_TEAM_ID=`node -pe 'JSON.parse(process.argv[1]).teams.find((team) => team.slug === "cartesi").id' $TEAMS`
           echo "Cartesi team id: " $CARTESI_TEAM_IDEAMS
           
