--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,13 +25,13 @@ jobs:
         run: |
           ROLLUPS_EXPLORER_SEPOLIA_URL=$(node getSepoliaDeploymentUrl.mjs ${{ secrets.VERCEL_TOKEN }})
           echo "Rollups Explorer Sepolia Url: " $ROLLUPS_EXPLORER_SEPOLIA_URL
-          echo "DEPLOYMENT_URL=$deployment-url" >> $ROLLUPS_EXPLORER_SEPOLIA_URL
+          echo "DEPLOYMENT_URL=$sepolia-deployment-url" >> $ROLLUPS_EXPLORER_SEPOLIA_URL
 
   wait-for-vercel-deployment:
     needs: [get-sepolia-deployment-url]
     runs-on: ubuntu-latest
     env:
-      DEPLOYMENT_URL: ${{ needs.get-sepolia-deployment-url.outputs.deployment-url }}
+      DEPLOYMENT_URL: ${{ needs.get-sepolia-deployment-url.outputs.sepolia-deployment-url }}
     steps:
       - name: Retrieve deployment URL (example on how to set an ENV var)
         run: "echo VERCEL_DEPLOYMENT_URL=nextjs-bzyss249z.vercel.app >> $GITHUB_ENV"
@@ -52,7 +52,7 @@ jobs:
     timeout-minutes: 30
     runs-on: ubuntu-latest
     env:
-      DEPLOYMENT_URL: ${{ needs.get-sepolia-deployment-url.outputs.deployment-url }}
+      DEPLOYMENT_URL: ${{ needs.get-sepolia-deployment-url.outputs.sepolia-deployment-url }}
     container:
       image: mcr.microsoft.com/playwright:v1.53.2-jammy
     steps:
